libs/@local/hashql/ast/tests/ui/lower/sanitizer/constraint.jsonc
//@ run: fail
//@ description: Generic constraints with bounds should be sanitized and error out
[
  "add<T: Number>",
  //~^ ERROR Remove this constraint from 'T'
  { "#literal": 1 },
  { "#literal": 2 }
]
